<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Musubi</string>
    <string name="app_store_name">App Corral</string>
    <string name="photo_sesh">Photo Sesh</string>
    <string name="start">Running...</string>
    <string name="stopping">Shutting down...</string>
    <string name="active">Is Active.</string>
    <string name="new_shared_contact">Shared Contact</string>
    <string name="main_no_items">No status updates</string>
    <string name="new_group">Add Group</string>
    <string name="request">Request!</string>
    <string name="hello">Hello World!</string>
    <string name="upload">Upload Photo</string>
    <string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>

    <string name="description_logo">Musubi</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_broadcast">Broadcast</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_latest">Latest</string>
    <string name="title_friends">Friends</string>
    <string name="title_friend">Friend</string>
    <string name="title_profile">Profile</string>
    <string name="title_groups">Groups</string>
    <string name="title_group">Group</string>
    <string name="title_new_group">New Group</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_settings">Settings</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>

    <string name="about_intro">This application was developed by the Mobisocial Lab at Stanford University (http://mobisocial.stanford.edu). \n\nIcons from www.freeiconsweb.com/</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    
    <!--  ZXing -->
    <string name="menu_share">Share</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="button_ok">OK</string>
    <string name="contents_text">Plain text</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="scan_here">Scan Here</string>
</resources>
