<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    >
    
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/title_refresh"
            android:layout_height="fill_parent"
            android:onClick="onClickRefresh" />
    </LinearLayout>

        <RelativeLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
        <Button android:id="@+id/go" 
            android:text="Go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
        <ImageButton android:id="@+id/qr"
            android:src="@drawable/qr"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/go"
            android:layout_alignTop="@id/go"
            android:layout_alignParentLeft="true" />
        <EditText android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Group passphrase..."
            android:layout_toLeftOf="@id/go"
            android:layout_toRightOf="@id/qr" />
</RelativeLayout>
    <ListView  
        android:id="@android:id/list"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        />
    <TextView android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        />
</LinearLayout>
